--- a/MerlionPortal/MerlionPortal-war/web/grns/viewmypost.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/viewmypost.xhtml
@@ -25,19 +25,24 @@
                 <p:submenu label="Home" styleClass="display:block">
                     <p:menuitem value="GRNS Home" url="grnsindexpage.xhtml" />
                 </p:submenu>
-                <p:submenu label="Posting" styleClass="display:block">
-                    <p:menuitem value="Aggregate Requests" url="aggregaterequests.xhtml" />
-                    <p:menuitem value="Post Spare Space" url="postmyspace.xhtml" />
-                </p:submenu>
-
-                <p:submenu label="Marketplace" styleClass="display:block">
-                    <p:menuitem value="Start Bidding" url="viewallposts.xhtml" />
-                </p:submenu>
+                <c:if test="#{dashboardBean.checkGRNSCanManagePost() ||dashboardBean.loginedUser.companycompanyId.companyId==1 ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Posting" styleClass="display:block">
+                        <c:if test="#{dashboardBean.loginedUser.companycompanyId.companyId==1 ||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="Aggregate Requests" url="aggregaterequests.xhtml" />
+                        </c:if>
+                        <p:menuitem value="Post Spare Space" url="postmyspace.xhtml" />
+                    </p:submenu>
+                </c:if>
+                <c:if test="#{dashboardBean.checkGRNSCanManageBid() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Marketplace" styleClass="display:block">
+                        <p:menuitem value="Start Bidding" url="viewallposts.xhtml" />
+                    </p:submenu>
+                </c:if>
                 <p:submenu label="Manage My Posts" styleClass="display:block">
-                    <p:menuitem value="All Posts" url="allmyposts.xhtml" />
+                    <p:menuitem value="All My Posts" url="allmyposts.xhtml" />
                 </p:submenu>
                 <p:submenu label="Manage My Bids" styleClass="display:block">
-                    <p:menuitem value="My biddings" url="allmybids.xhtml" />
+                    <p:menuitem value="All My biddings" url="allmybids.xhtml" />
                 </p:submenu>
             </p:menu>
         </ui:define>
