--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
@@ -78,7 +78,7 @@
 
         <ui:define name="right">   
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                <p:menuitem value="TMS Home" url="crmsindex.xhtml" />
                 <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
                 <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
             </p:breadCrumb>
