--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
@@ -78,14 +78,14 @@
 
         <ui:define name="right">   
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
-                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                <p:menuitem value="Facilities Management" url="tmsindex.xhtml" />
+                <p:menuitem value="Add New Facility" url="addnewlocation.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <br/>
 
-                <p:panel id="panel" header="Add New Location">
+                <p:panel id="panel" header="Add New Facility">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
                             <h:graphicImage value="/img/load.gif" />
@@ -110,7 +110,7 @@
                             <f:selectItems value="#{tLocationManagerBean.nodes}" var="nodeId" itemLabel="ID:#{nodeId.nodeId}   Name:#{nodeId.locationName}"  itemValue="#{nodeId.nodeId}"/>
                         </p:selectOneMenu>
 
-                        <p:outputLabel for="locationName" style="font-weight: bold" value="Location Name: " /><p:spacer width="20" height="20" />
+                        <p:outputLabel for="locationName" style="font-weight: bold" value="Facility Name: " /><p:spacer width="20" height="20" />
                         <p:inputText required="true" label="Location Name" requiredMessage="Location Name is required." id="locationName" value="#{tLocationManagerBean.locationName}">
                             <f:validateLength minimum="1" maximum="40" />
                         </p:inputText>
