--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
@@ -78,9 +78,9 @@
 
         <ui:define name="right">   
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
-                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                <p:menuitem value="Map Settings" url="tmsindex.xhtml" />
+                <p:menuitem value="Add A Route" url="addnewroute.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <br/>
