--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -78,9 +78,9 @@
 
         <ui:define name="right">   
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
-                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                <p:menuitem value="Transportation Asset Management" url="tmsindex.xhtml" />
+                <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <p:panel id="panel" header=" View Transportation Asset for A Location">
@@ -137,7 +137,7 @@
                         </p:column>                
                         <p:column  headerText="Capacity">
                             <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{tAsset.capacity}" /></f:facet>
+                                <f:facet name="output"><h:outputText value="#{tAsset.capacity} TEU" /></f:facet>
                                 <f:facet name="input"><p:inputText value="#{tAsset.capacity}" style="width:100%" label="Capacity"/></f:facet>
                             </p:cellEditor>
                         </p:column>
@@ -145,7 +145,7 @@
 
                         <p:column  headerText="Price">
                             <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{tAsset.price}" /></f:facet>
+                                <f:facet name="output"><h:outputText value="$#{tAsset.price}/Km" /></f:facet>
                                 <f:facet name="input"><p:inputText value="#{tAsset.price}" style="width:100%" label="Price"/></f:facet>
                             </p:cellEditor>
                         </p:column>
@@ -153,14 +153,14 @@
 
                         <p:column  headerText="Speed">
                             <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{tAsset.speed}" /></f:facet>
+                                <f:facet name="output"><h:outputText value="#{tAsset.speed}Km/h" /></f:facet>
                                 <f:facet name="input"><p:inputText value="#{tAsset.speed}" style="width:100%" label="Speed"/></f:facet>
                             </p:cellEditor>
                         </p:column>
 
 
 
-                        <p:column  headerText="Status">
+                        <p:column  headerText="Remark">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{tAsset.status}" /></f:facet>
                                 <f:facet name="input"><p:inputText value="#{tAsset.status}" style="width:100%" label="Status"/></f:facet>
@@ -196,7 +196,7 @@
                                 <p:selectOneMenu id="fromRoute" value="#{TTassetViewEditManagedBean.fromRouteId}"  style="width:300px" required="true" requiredMessage="Please select a Destination">
                                     <p:ajax listener="#{TTassetViewEditManagedBean.onFromRouteChange()}" update="fromAssetData" />
                                     <f:selectItem itemLabel="Select Destination" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{TTassetViewEditManagedBean.fromRoutes}" var="froute" itemLabel="ID:#{froute.routeId} To:#{froute.destination}"  itemValue="#{froute.routeId}"/>
+                                    <f:selectItems value="#{TTassetViewEditManagedBean.fromRoutes}" var="froute" itemLabel="ID:#{froute.routeId} To:#{froute.destination} Type:#{froute.routeType}"  itemValue="#{froute.routeId}"/>
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
@@ -216,7 +216,7 @@
 
                         <p:column  headerText="Load">
 
-                            <h:outputText value="#{fAsset.assetLoad}" />
+                            <h:outputText value="#{fAsset.assetLoad} TEU" />
                         </p:column>
 
 
@@ -237,7 +237,7 @@
                                 <p:selectOneMenu id="toRoute" value="#{TTassetViewEditManagedBean.toRouteId}"  style="width:300px" required="true" requiredMessage="Please select a Origin">
                                     <p:ajax listener="#{TTassetViewEditManagedBean.onToRouteChange()}" update="toAssetData" />
                                     <f:selectItem itemLabel="Select Origin" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{TTassetViewEditManagedBean.toRoutes}" var="toroute" itemLabel="ID:#{toroute.routeId} From:#{toroute.origin}"  itemValue="#{toroute.routeId}"/>
+                                    <f:selectItems value="#{TTassetViewEditManagedBean.toRoutes}" var="toroute" itemLabel="ID:#{toroute.routeId} From:#{toroute.origin} Type:#{toroute.routeType}"  itemValue="#{toroute.routeId}"/>
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
@@ -258,7 +258,7 @@
 
                         <p:column  headerText="Load">
 
-                            <h:outputText value="#{toAsset.assetLoad}" />
+                            <h:outputText value="#{toAsset.assetLoad} TEU" />
                         </p:column>
 
 
