--- a/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
@@ -25,7 +25,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
-                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender" />
                 </p:submenu>
                 <p:submenu label =" Warehouse" styleClass="display:block">
                     <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
@@ -43,31 +43,52 @@
                     <p:menuitem value="Add Stock" url="addstock.xhtml"/>
                     <p:menuitem value="View Stock" url="viewstock.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Stock Audit" styleClass="display:block" >
-                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
-                    <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
-                    <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
+
+                <c:if test="#{dashboardBean.checkWMSCanManageStockAuditProcess() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Stock Audit" styleClass="display:block" >
+                        <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                        <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
+                        <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
+                    </p:submenu>
+                </c:if>
+                <c:if test="#{dashboardBean.checkWMSCanManageStockTransportOrder()||dashboardBean.checkWMSCanManageOrderFulfillment()||dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Stock Transport Order" styleClass="display:block" >
+                        <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
+                        <p:menuitem value="View Transport Order To Be Processed" url="viewsourcetransportorder.xhtml"/>
+                        <p:menuitem value="All Incoming Transport Orders" url="viewdesttransportorder.xhtml"/>
+                    </p:submenu>
+                </c:if>
+                <c:if test="#{dashboardBean.checkWMSCanManageReceivingGoods()|| dashboardBean.checkWMSCanManageOrderFulfillment()|| dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
+                        <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
+                        <c:if test="#{dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="View Receiving Orders" url="viewincomingorders.xhtml"/>
+                        </c:if>
+                        <c:if test="#{dashboardBean.checkWMSCanManageOrderFulfillment()||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="View Fulfillment Orders" url="viewoutgoingorders.xhtml"/>
+                        </c:if>
+                    </p:submenu>
+                </c:if>
+                <p:submenu label="Rented Bins Management" styleClass="display:block" >
+                    <p:menuitem value="View Rented Bins" url="viewrentedbins.xhtml"/>
+                    <p:menuitem value="View Stock In Rented Bins" url="viewstockinrentedbins.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Stock Transport Order" styleClass="display:block" >
-                    <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
-                    <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
-                    <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
-                </p:submenu>
-                <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
-                    <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
-                    <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
-                    <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
-                </p:submenu>
-                <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
-                    <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
-                    <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
-                </p:submenu>
-                <p:submenu label="Warehouse Space Fulfillment Check" >
-                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
-                </p:submenu>
-                <p:submenu label="View Notification" >
-                    <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
-                </p:submenu>
+                <c:if test="#{dashboardBean.checkWMSCanManageReceivingGoods()|| dashboardBean.checkWMSCanManageOrderFulfillment() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
+                        <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
+                        <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
+                    </p:submenu>
+                </c:if>
+                <c:if test="#{dashboardBean.checkWMSManageWarehouse() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Warehouse Space Fulfillment Check" >
+                        <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+                    </p:submenu>
+                </c:if>
+                <c:if test="#{dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="View Notification" >
+                        <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
+                    </p:submenu>
+                </c:if>
             </p:menu>
         </ui:define>
 
