--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallmaintenancelog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallmaintenancelog.xhtml
@@ -20,57 +20,72 @@
             </ui:insert>
         </ui:define>
         <ui:define name="left">
-            <h:form id="formMain">
-                 <p:menu>
+ <h:form id="formMain">
+                <p:menu>
                     <p:submenu label ="Map Settings">
                         <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
                         <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
                         <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                     </p:submenu>
                     <p:submenu label =" Manage Your Transportation">
-                        <p:menuitem value="TMS Home" url="tmsindex.xhtml"  style="background-color: lavender"/>
+                        <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
                     </p:submenu>
-                    <p:submenu label="Location" >
-                        <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
-                        <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Transportation Asset Management" >
-                        <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
-                        <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Asset Dispatching" >
-                        <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
-                        <p:menuitem value="View Current Tasks" url="viewalltassetschedule.xhtml" />
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Location" >
+                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
+                            <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
+                        </p:submenu>
+                        <p:submenu label="Transportation Asset Management" >
+                            <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
+                            <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
+                        </p:submenu>
+                        <p:submenu label="Asset Dispatching" >
+                            <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
+                            <p:menuitem value="View Current Tasks" url="viewalltassetschedule.xhtml" />
+                        </p:submenu>
+                    </c:if>
+                    <c:if test="#{dashboardBean.checkTMSCanManageAssetMaintenence() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Asset Maintenance" >
+                            <p:menuitem value="Create Maintenance" url="addnewmaintenancelog.xhtml"  />
+                            <p:menuitem value="View All Maintenance" url="viewallmaintenancelog.xhtml" />
+                        </p:submenu>
+                    </c:if>
+                    <c:if test="#{dashboardBean.checkTMSCanUseHRFunction() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Human Resource Management" >
+                            <p:menuitem value="New Operator" url="addnewoperator.xhtml"  />
+                            <p:menuitem value="Operator List" url="viewalloperator.xhtml" />
+                        </p:submenu>
+                        <p:submenu label="Operator Schedule" >
+                            <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
+                            <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
+                        </p:submenu>
+                    </c:if>
 
-                    <p:submenu label="Asset Maintenance" >
-                        <p:menuitem value="Create Maintenance" url="addnewmaintenancelog.xhtml"  />
-                        <p:menuitem value="View All Maintenance" url="viewallmaintenancelog.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Human Resource Management" >
-                        <p:menuitem value="New Operator" url="addnewoperator.xhtml"  />
-                        <p:menuitem value="Operator List" url="viewalloperator.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Operator Schedule" >
-                        <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
-                        <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
-                    </p:submenu>
-
-                    <p:submenu label="Transportation Order" >
-                        <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
-                        <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
-                        <p:menuitem value="View Order Details" url="viewalllog.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Transportation Order" >
-                        <p:menuitem value="Create Log For Order" url="addnewlog.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Transportation Request" >
-                        <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
-                        <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Transportation Service Fulfillment Check" >
-                        <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()|| dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Transportation Order" >
+                            <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
+                                <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
+                                <p:submenu label="Order Simulation" >
+                                    <p:menuitem value="Run Cost Simulation" url="runEstimation.xhtml" />
+                                    <p:menuitem value="View Past Simulation" url="viewEstimation.xhtml" />
+                                </p:submenu>
+                            </c:if>
+                            <p:menuitem value="View Order Details" url="viewalllog.xhtml"/>
+                            <c:if test="#{dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Create Log For Order" url="addnewlog.xhtml" />
+                            </c:if>
+                        </p:submenu>
+                    </c:if>
+                    <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label="Transportation Request" >
+                            <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
+                            <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
+                        </p:submenu>
+                        <p:submenu label="Transportation Service Fulfillment Check" >
+                            <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
+                        </p:submenu>
+                    </c:if>
 
                 </p:menu>
             </h:form>
